// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Weather render should render Unknown forecast 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Unknown
</span>
`;

exports[`Weather render should render the forecast 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Gusty, Drizzle
</span>
`;

exports[`Weather render should render the forecast and temperature 1`] = `
<span
  className="CM-weather-forecast"
>
  Weather - 
  Gusty, Drizzle
  <span>
    , 
    10
    °C
  </span>
</span>
`;
